--- a/show_platform_date_picker/pubspec.yaml
+++ b/show_platform_date_picker/pubspec.yaml
@@ -1,7 +1,9 @@
 name: show_platform_date_picker
 description: Mnimalist wrapper around the showDatePicker and CupertinoDatePicker methods.
-version: 0.0.3
+version: 0.0.4
 homepage: https://responsivehelp.com
+repository: https://github.com/tinoper/show_platform_date_picker/tree/main/show_platform_date_picker
+issue_tracker: https://github.com/tinoper/show_platform_date_picker/issues
 
 environment:
   sdk: '>=2.18.6 <3.0.0'
