--- a/show_platform_date_picker/example/pubspec.yaml
+++ b/show_platform_date_picker/example/pubspec.yaml
@@ -1,9 +1,9 @@
 name: example
-description: "A new Flutter project."
+description: "ShowPlatformDatePicker example"
 
 publish_to: 'none' 
 
-version: 1.0.0+1
+version: 1.0.5+0
 
 environment:
   sdk: '>=3.9.0'
@@ -21,7 +21,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
 
